--- a/.github/workflows/test_discord.yml
+++ b/.github/workflows/test_discord.yml
@@ -1,14 +1,11 @@
-name: Test Discord Notification
+name: Hello World
 
 on:
   workflow_dispatch:
 
 jobs:
-  test:
+  build:
     runs-on: ubuntu-latest
     steps:
-      - name: Send test message
-        run: |
-          curl -H "Content-Type: application/json" \
-          -d '{"content": "✅ Dealbot is connected to Discord!"}' \
-          ${{ secrets.DISCORD_WEBHOOK }}
+      - name: Say hello
+        run: echo "Hello, GitHub Actions!"
